@@ -3,13 +3,18 @@
 	Removed BALLOC, MALLOC and VADR keywords. Removed duplicate ENVIRON
 	Added TIMESTAMP to return the modified-datetime of a file
 	Removed system constants BPP and VIDADR, OSNAME, LINECHART, BARCHART
+	SBVER now includes build information
 	TICKS now returns millisecond intervals
 	Refactor eval() for performance
 	Fixed some memory leaks in the ui handler
 	Editor now restores cursor when returning from run
+	Editor now displays the correct filename in the title bar
 	Added "industrial" editor theme from Shian (slot 2)
 	Runtime errors now show source screen with red error highlighter
 	Form refresh command now takes an boolean arg, true=push ui state to vars
+	Added window.setFont command to set font size, bold and italic. example:
+           w = window():w.setFont(10, "pt", false, true)
+	Fix problem with escaped chars using FORMAT
 
 2016-02-11
 	Added export to mobile command (SDL)
